<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="adas">ADAS</string>
    <string name="adas_activate_exception">Activation exception</string>
    <string name="adas_activate_fail">Activation failed!</string>
    <string name="adas_activate_ing">Adas is activating</string>
    <string name="adas_activate_success">Activation succeeded!</string>
    <string name="adas_adjust">ADAS Adjust</string>
    <string name="adas_biaoding">Calibration in progress</string>
    <string name="adas_first_activate">The first use of ADAS requires network activation, please keep the network unobstructed!</string>
    <string name="adas_fvd">FVD</string>
    <string name="adas_isplay_back">ADAS Back play</string>
    <string name="adas_lane">lane</string>
    <string name="adas_not_enable">ADAS Not Enable</string>
    <string name="adas_setting">ADAS Settings</string>
    <string name="adas_sound">enable sound</string>
    <string name="adas_sound_type">sound type</string>
    <string name="adas_sound_type_dudu">dudu sound</string>
    <string name="adas_sound_type_people">people sound</string>
    <string name="adas_starting">ADAS Starting, please wait</string>
    <string name="adas_vehicle">vehicle</string>
    <string name="adas_warn">Warn</string>
    <string name="adjust_cancel">Cancel</string>
    <string name="android_version">Android Version:</string>
    <string name="app_name">Traffic safety guard</string>
    <string name="app_upgrade">app upgrade</string>
    <string name="app_upgrade_downloading">app upgrade downloading:</string>
    <string name="app_upgrade_prompt">No authorization to read and write SD card, installation package can not be downloaded to your device, you can click to jump to system page authorization, otherwise you will not be able to upgrade.</string>
    <string name="app_version">A-VER:</string>
    <string name="app_version_format">App version:%1$s</string>
    <string name="auth_fail_device_unauthorized">auth fail,device unauthorized</string>
    <string name="auth_fail_number_used_out">auth_fail,number used out</string>
    <string name="auth_fail_server_expection">auth_fail,server expection</string>
    <string name="auth_recovery_failed_over_frequent_recovery">auth recovery failed,over frequent recovery</string>
    <string name="auth_recovery_failed_record_was_found">auth recovery failed,record was found</string>
    <string name="auth_success">auth success</string>
    <string name="authorization">Authorization</string>
    <string name="back">Returns</string>
    <string name="cancel">Cancel</string>
    <string name="capture_car">Capture car</string>
    <string name="capture_distance">Distance</string>
    <string name="capture_time">Time</string>
    <string name="check">Correcting</string>
    <string name="checkdevupdate">check the Dev new version</string>
    <string name="checkupdate">check the new version</string>
    <string name="close">Off</string>
    <string name="confirm">OK</string>
    <string name="confirm_delete_file">Are you sure you want to delete?</string>
    <string name="confirm_format_tf">Are you sure you want to format the memory card?</string>
    <string name="confirm_format_tfcard">In order to improve the efficiency of video format TF card?</string>
    <string name="current_dataversion">data version：%1$s</string>
    <string name="day_format">yyyy.MM.dd kk</string>
    <string name="delete">Delete</string>
    <string name="delete_fail">delete failed</string>
    <string name="delete_sucess">delete succeed</string>
    <string name="dev_download_time_out">Timeout, please keep the network unblocked and try again!</string>
    <string name="dev_file_download_progress">Downloading upgrade file</string>
    <string name="dev_reset_content">Recorder is upgrading, please do not power off! The flashing light indicates that the upgrade is in progress, and the long or slow flashing light indicates that the upgrade is successful.</string>
    <string name="dev_upgrade_error">Upgrade failed</string>
    <string name="dev_upgrade_success">Upgrade succeeded!</string>
    <string name="dev_upgrade_title">Recorder upgrade</string>
    <string name="dev_version_not_supper">The recorder version is not supported. The version must be greater than or equal to 1.2.3 and less than 2.0.0, or greater than or equal to 2.2.3</string>
    <string name="device_authorized">device authorized</string>
    <string name="device_model">Device Model:</string>
    <string name="device_setting">Device Settings</string>
    <string name="device_version">F-VER:</string>
    <string name="device_version_format">Firmware version:%1$s</string>
    <string name="dialog_format_title_prompt">Notifications</string>
    <string name="download_complete">download complete</string>
    <string name="download_completed">Download Successed</string>
    <string name="download_fail">Download failed</string>
    <string name="download_sucess">Download successful</string>
    <string name="downloading">downloading %1$s</string>
    <string name="east">east</string>
    <string name="edog">Edog</string>
    <string name="edog_isplay_back">EDog Back play</string>
    <string name="edog_setting">Edog Setting</string>
    <string name="edog_setting_gps_edog">GPS fixed electronic dog alarm</string>
    <string name="edog_setting_red_light">Red light alarm cue</string>
    <string name="edog_setting_security_info">Security information class hints</string>
    <string name="edog_setting_verspeed">Overspeed alarm note Dangdang</string>
    <string name="fail">fail</string>
    <string name="fast_back">fast back</string>
    <string name="fast_forward">fast forward</string>
    <string name="float_permission_prompt">Without necessary permissions, you can jump to the system page authorization according to the confirmation, otherwise you will not be able to use the suspension window properly.</string>
    <string name="float_windows_tips_content">Please open the float window permission of the %s in the device settings</string>
    <string name="format_tf">Format the TF card</string>
    <string name="format_tf_fail">Formatting failed</string>
    <string name="format_tf_sucess">Formatted successfully</string>
    <string name="format_tf_tips">Formatting TF cards clears all data (videos, photos). Are you sure you want to do that?</string>
    <string name="get_install_package_permission_fail">Failed to get install permission</string>
    <string name="has_no_tfcard">TF card not detected</string>
    <string name="help">help</string>
    <string name="high">High</string>
    <string name="insert_device2">\10\9\9\9Loading ...\10Recorder please connect to 6Pin_usb2 port</string>
    <string name="install_package_tips_content">Open Device Settings to Install Unknown Application Permissions</string>
    <string name="instruction_book">Instruction book</string>
    <string name="ip_unauthorized">ip unauthorized</string>
    <string name="is_the_latest_version">is the latest version</string>
    <string name="last_info_cord">The last information record</string>
    <string name="lock_fail">lock fail!</string>
    <string name="lock_success">lock success!</string>
    <string name="lock_video">protection</string>
    <string name="low">Low</string>
    <string name="manufacturer_unauthorized">manufacturer unauthorized</string>
    <string name="media_player">Mode 2</string>
    <string name="middle">middle</string>
    <string name="minute_1">1 minute</string>
    <string name="minute_2">2 minute</string>
    <string name="minute_3">3 minute</string>
    <string name="need_format_tfcard">The memory card needs formatting. Do you want to format it immediately?</string>
    <string name="network_connection_timeout">Network connection timeout</string>
    <string name="network_error">network error</string>
    <string name="new_version">new version:</string>
    <string name="no">No</string>
    <string name="no_connect_prompt1">Tips：\10\101,Please check whether the USB line interface is loose or not\10\102,Please check if TF card is suitable for HD recorder (first try to remove TF Card)</string>
    <string name="no_location_permission">Missing location rights</string>
    <string name="no_network">No network</string>
    <string name="no_permission">no permission</string>
    <string name="no_stardar_recoder">The current recorder is not a standard version</string>
    <string name="no_update">No version update</string>
    <string name="north">north</string>
    <string name="northeast">Northeast</string>
    <string name="northwest">Northwest</string>
    <string name="not_support_adas">Recorder version does not match ADAS version</string>
    <string name="notice">Prompt</string>
    <string name="notifycation">prompt：current TF card format error</string>
    <string name="ok">ok</string>
    <string name="open">On</string>
    <string name="open_car_monitor">Please make sure the recorder is ready!</string>
    <string name="open_float_windows_fail">Failed to open float window</string>
    <string name="open_immediately">Open immediately</string>
    <string name="parameter_error">parameter error</string>
    <string name="picture">Photo</string>
    <string name="play_speed">play speed</string>
    <string name="playback_mode">Playback</string>
    <string name="please_confirm">Please confirm that you have</string>
    <string name="please_wait">please wait...</string>
    <string name="problem_prompt">Please plug and unplug the recorder</string>
    <string name="quit">quit</string>
    <string name="record_video">video</string>
    <string name="recorder_not_ready">Recorder not ready!</string>
    <string name="register_success">register success</string>
    <string name="request_granted">The request is granted</string>
    <string name="request_refused">The request was refused</string>
    <string name="snapshot_voice">Photo Tips Sound</string>
    <string name="sound_pool">Mode 1</string>
    <string name="sound_what">voice</string>
    <string name="switch_adas">ADAS Switch</string>
    <string name="video_duration">Video Duration</string>
    <string name="voice_other">Mode 3</string>
    <string name="warn_fcw">Vehicle collision</string>
    <string name="warn_fcw_speed">Vehicle collision warn speed: %d km/h</string>
    <string name="warn_ldw">Lane departure</string>
    <string name="warn_ldw_speed">Lane departure warn speed: %d km/h</string>
    <string name="warn_stopgo">Stop go</string>
</resources>