<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="@dimen/settings_dialog_width" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/dialog_item_selector" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="@dimen/set_txt_size" android:textColor="@color/main_txt_normal" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/switch_adas" android:layout_weight="1"/>
            <ToggleButton android:id="@+id/adas_switch" android:background="@android:color/transparent" android:layout_width="@dimen/toggle_btn_width" android:layout_height="@dimen/toggle_btn_height" android:layout_marginLeft="@dimen/settings_ctrl_margin_vertical" android:layout_marginRight="@dimen/settings_ctrl_margin_vertical" android:button="@drawable/thumb_selector" android:textOn="" android:textOff=""/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/set_adas_adjust_view" android:background="@drawable/dialog_item_selector" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="@dimen/set_txt_size" android:textColor="@color/main_txt_normal" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/adas_adjust" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/dialog_item_selector" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="@dimen/set_txt_size" android:textColor="@color/main_txt_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adas_warn"/>
            <RadioGroup android:gravity="center" android:orientation="horizontal" android:id="@+id/adas_warn_rg" android:layout_width="match_parent" android:layout_height="wrap_content">
                <RadioButton android:textSize="18sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:id="@+id/warn_low_rb" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/low" android:layout_weight="1"/>
                <RadioButton android:textSize="18sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:id="@+id/warn_middle_rb" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/middle" android:layout_weight="1"/>
                <RadioButton android:textSize="18sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:id="@+id/warn_high_rb" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/high" android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/dialog_item_selector" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="@dimen/set_txt_size" android:textColor="@color/main_txt_normal" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/warn_ldw" android:layout_weight="1"/>
            <ToggleButton android:id="@+id/set_warn_ldw_switch" android:background="@android:color/transparent" android:layout_width="@dimen/toggle_btn_width" android:layout_height="@dimen/toggle_btn_height" android:layout_marginLeft="@dimen/settings_ctrl_margin_vertical" android:layout_marginRight="@dimen/settings_ctrl_margin_vertical" android:button="@drawable/thumb_selector" android:textOn="" android:textOff=""/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/dialog_item_selector" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="@dimen/set_txt_size" android:textColor="@color/main_txt_normal" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/warn_fcw" android:layout_weight="1"/>
            <ToggleButton android:id="@+id/set_warn_fcw_switch" android:background="@android:color/transparent" android:layout_width="@dimen/toggle_btn_width" android:layout_height="@dimen/toggle_btn_height" android:layout_marginLeft="@dimen/settings_ctrl_margin_vertical" android:layout_marginRight="@dimen/settings_ctrl_margin_vertical" android:button="@drawable/thumb_selector" android:textOn="" android:textOff=""/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/dialog_item_selector" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="@dimen/set_txt_size" android:textColor="@color/main_txt_normal" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/warn_stopgo" android:layout_weight="1"/>
            <ToggleButton android:id="@+id/set_warn_stopgo_switch" android:background="@android:color/transparent" android:layout_width="@dimen/toggle_btn_width" android:layout_height="@dimen/toggle_btn_height" android:layout_marginLeft="@dimen/settings_ctrl_margin_vertical" android:layout_marginRight="@dimen/settings_ctrl_margin_vertical" android:button="@drawable/thumb_selector" android:textOn="" android:textOff=""/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@drawable/dialog_item_selector" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="23sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:id="@+id/warn_ldw_speed_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/warn_ldw_speed"/>
            <SeekBar android:id="@+id/warn_ldw_speed_bar" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_ctrl_margin_vertical" android:layout_marginRight="@dimen/settings_ctrl_margin_vertical" android:maxHeight="@dimen/seek_bar_height" android:progressDrawable="@drawable/progress_selector" android:minHeight="@dimen/seek_bar_height"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@drawable/dialog_item_selector" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="23sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:id="@+id/warn_fcw_speed_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/warn_fcw_speed"/>
            <SeekBar android:id="@+id/warn_fcw_speed_bar" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_ctrl_margin_vertical" android:layout_marginRight="@dimen/settings_ctrl_margin_vertical" android:maxHeight="@dimen/seek_bar_height" android:progressDrawable="@drawable/progress_selector" android:minHeight="@dimen/seek_bar_height"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/dialog_item_selector" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="@dimen/set_txt_size" android:textColor="@color/main_txt_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/capture_car"/>
            <RadioGroup android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <RadioButton android:textSize="18sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/capture_distance" android:layout_weight="1"/>
                <RadioButton android:textSize="18sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/capture_time" android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/dialog_item_selector" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="@dimen/set_txt_size" android:textColor="@color/main_txt_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sound_what"/>
            <RadioGroup android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <RadioButton android:textSize="18sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/sound_pool" android:layout_weight="1"/>
                <RadioButton android:textSize="18sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/media_player" android:layout_weight="1"/>
                <RadioButton android:textSize="18sp" android:textColor="@color/main_txt_normal" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/voice_other" android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/dialog_item_selector" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/settings_item_height" android:layout_marginLeft="@dimen/settings_item_margin_vertical" android:layout_marginRight="@dimen/settings_item_margin_vertical">
            <TextView android:textSize="@dimen/set_txt_size" android:textColor="@color/main_txt_normal" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/instruction_book" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
