<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#33000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:paddingLeft="48px" android:paddingTop="18px" android:paddingRight="32px" android:paddingBottom="18px" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/about_text_size" android:textColor="@color/WHITE" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/snapshot_voice"/>
        <CheckBox android:id="@+id/cb_snapshow_voice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/cb_check_selecter" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/BLACK" android:layout_width="match_parent" android:layout_height="0.9dp"/>
    <RelativeLayout android:id="@+id/video_durtion_layout" android:paddingTop="18px" android:paddingBottom="18px" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/about_text_size" android:textColor="@color/WHITE" android:id="@+id/tv_video_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_duration" android:layout_centerHorizontal="true"/>
        <RadioGroup android:gravity="center" android:orientation="horizontal" android:id="@+id/video_durtion" android:paddingTop="18px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/tv_video_duration" android:layout_centerHorizontal="true">
            <RadioButton android:textSize="@dimen/about_text_size" android:textColor="@color/WHITE" android:gravity="center" android:id="@+id/minute_1" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/minute_1" android:layout_weight="1"/>
            <RadioButton android:textSize="@dimen/about_text_size" android:textColor="@color/WHITE" android:gravity="center" android:id="@+id/minute_2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/minute_2" android:layout_weight="1"/>
            <RadioButton android:textSize="@dimen/about_text_size" android:textColor="@color/WHITE" android:gravity="center" android:id="@+id/minute_3" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/minute_3" android:layout_weight="1"/>
        </RadioGroup>
    </RelativeLayout>
</LinearLayout>
