<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#303030" android:padding="25dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="35dp">
        <TextView android:textSize="25dp" android:textColor="#ffffff" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open_float_windows_fail"/>
    </LinearLayout>
    <View android:background="#a1a1a1" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="15dp" android:layout_marginRight="15dp"/>
    <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="70dp">
        <TextView android:textSize="17dp" android:textColor="#ffffff" android:id="@+id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/float_windows_tips_content"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="300dp" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="10dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
            <Button android:textSize="17dp" android:textColor="#ffffff" android:id="@+id/cancel" android:background="@drawable/bg_btn_blue" android:layout_width="match_parent" android:layout_height="50dp" android:text="@string/cancel"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="10dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
            <Button android:textSize="17dp" android:textColor="#ffffff" android:id="@+id/ok" android:background="@drawable/bg_btn_blue" android:layout_width="match_parent" android:layout_height="50dp" android:text="@string/open_immediately"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
