<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.fvision.camera.adas.ui.SVDrawRectangle android:id="@+id/svdraw" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <ProgressBar android:id="@+id/progressbar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"/>
    <TextView android:textSize="24sp" android:textColor="@color/focus_color" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/open_car_monitor" android:layout_below="@+id/progressbar" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="36sp" android:textColor="@color/color_speed" android:id="@+id/tv_main_speed" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="100dp" android:text="0 Km/h" android:singleLine="true" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="36sp" android:textColor="@color/color_speed" android:id="@+id/tv_main_calibrate" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="150dp" android:text="@string/adas_biaoding" android:singleLine="true" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    <RelativeLayout android:id="@+id/top_layout" android:visibility="visible" android:layout_width="400dp" android:layout_height="wrap_content" android:layout_marginBottom="140dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="36sp" android:textColor="@color/text_press" android:gravity="center" android:id="@+id/tv_adas_check" android:background="@drawable/tv_bg" android:padding="5sp" android:layout_width="100dp" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/check" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        <TextView android:textSize="36sp" android:textColor="@color/text_press" android:gravity="center" android:id="@+id/tv_adas_setting" android:background="@drawable/tv_bg" android:padding="5sp" android:layout_width="100dp" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/adjust_cancel" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>
